# daily-tracker

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: api-pr-tests.yml  pull-request-tests.yml  web-frontend-pr-tests.yml
tracker-api/: pyproject.toml  wsgi.py
tracker-api/migrations/versions/: 0402b2f63103_users_table.py  492c7eef4538_.py  5c4d1e7e7e38_.py  60053932e2ce_.py  b11b3ded02f7_.py  cd046d7dc0af_.py
tracker-api/tracker-api/: run.py
tracker-api/tracker_api/: __init__.py  config.py  error_handling.py  helpers.py  models.py  routes.py  timetable.py  user.py
tracker-api/tracker_api/data_access/: data_access.py  exc.py  sqlalchemy.py
tracker-api/tracker_api/routes/: auth.py  err_msgs.py  work_tracking.py
tracker-api/tracker_api/tests/: conftest.py  test_work_tracking.py
tracker-api/tracker_api/tests/integration/: test_auth_routes.py  test_routes.py  test_sqlalchemy_data_access.py
tracker-api/tracker_api/tests/unit/: test_user.py  test_work_tracking.py
web/: README.md  package-lock.json  package.json
web/src/: App.test.tsx  App.tsx  constants.ts  helpers.ts  interfaces.ts  setupTests.ts
web/src/components/AddTaskForm/: AddTaskForm.test.tsx  AddTaskForm.tsx
web/src/components/EditableCell/: EditableCell.tsx
web/src/components/Header/: Header.test.tsx  Header.tsx
web/src/components/LoginForm/: LoginForm.test.tsx  LoginForm.tsx
web/src/hooks/: UseInterval.ts
web/src/mocks/: handlers.ts  server.ts
web/src/pages/: Home.test.tsx  Home.tsx  Landing.test.tsx  Landing.tsx
web/src/testUtils/: userEvents.ts
(+11 files in other folders)
