[tool.poetry]
name = "tracker-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.0"
python-dotenv = "^0.17.1"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.0.0"
psycopg2 = "^2.8.6"
pytest = "^6.2.4"
requests = "^2.25.1"
Faker = "^8.6.0"
Flask-JWT-Extended = "^4.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
